# Hydroxide

./: Cargo.toml  LICENSE.md  README.md  build  run
scripts/: pre-commit.hook  setup-dev-env
src/: ansi.rs  bga.rs  cmos.rs  gdt.rs  heap.rs  idt.rs  kbc.rs  main.rs  paging.rs  pci.rs  pic.rs  pit.rs  ps2kbd.rs  serial.rs  vgaterm.rs
src/arch/: mod.rs
src/arch/x86_64/: asm.rs  context.rs  cpu.rs  interrupts.rs  lock.rs  mod.rs
src/context/: atomic.rs  context.rs  context_list.rs  memory.rs  mod.rs  mpsc.rs  scheduler.rs  switch.rs  thread.rs
src/context/arch/: switch.asm  x86_64.rs
src/hal/: mod.rs
