[package]
name = "hydroxide"
version = "0.1.0"
authors = ["SplittyDev <splittydev@protonmail.com>"]
edition = "2018"

[dependencies]
x86_64 = { version = "0.14.9", features = ['nightly', 'instructions'] }
bootloader = "0.10.12"
lazy_static = { version = "1.4.0", features = ['spin_no_std'] }
spin = "0.9.3"
pic8259_simple = "0.2.0"
linked_list_allocator = "0.9.1"
bitflags = "1.3.2"
pc-keyboard = "0.5.1"
rlibc = "1.0.0"

# [package.metadata.bootimage]
# target = "x86_64-hydroxide.json"
# run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-m", "1G"]